--- a/WinCorePatPranali/src/app/app-router/app-router.component.html
+++ b/WinCorePatPranali/src/app/app-router/app-router.component.html
@@ -499,13 +499,13 @@
                             </a>
                             <ul>
                                 <li>
-                                    <a class="nav-link nav-link-menu" [class.mm-active]="isMenuSelected('customer-search')" (click)="configClick('customer-search')">
+                                    <a [class.mm-active]="isMenuSelected('customer-search')" (click)="configClick('customer-search')">
                                         <i class="metismenu-icon pe-7s-star"></i>
                                        Customers
                                     </a>
                                 </li>
                                 <li>
-                                    <a class="nav-link nav-link-menu" [class.mm-active]="isMenuSelected('member-list')" (click)="configClick('member-list')">
+                                    <a [class.mm-active]="isMenuSelected('member-list')" (click)="configClick('member-list')">
                                         <i class="metismenu-icon pe-7s-add-user"></i>
                                         Members
                                     </a>
