--- a/WinCorePatPranali/src/app/screens/masters/tahshil-master/tahshil-master-form/tahshil-master-form.component.html
+++ b/WinCorePatPranali/src/app/screens/masters/tahshil-master/tahshil-master-form/tahshil-master-form.component.html
@@ -14,9 +14,9 @@
                             <label for="txtName" class="">State</label>
                             <div class="input-group">
                                 <select class="mb-2 form-control" tabindex="10"
-                                formControlName="stateId">
+                                formControlName="stateId" (change)="onStateChange($event)" >
                                 <option *ngFor="let uiState of uiStates" [ngValue]="uiState.id">
-                                    {{uiState.name}}
+                                    {{uiState.stateName}}
                                 </option>
                             </select>
                             </div>
@@ -29,7 +29,7 @@
                                 <select class="mb-2 form-control" tabindex="10"
                                 formControlName="districtId">
                                 <option *ngFor="let uiDistrict of uiDistricts" [ngValue]="uiDistrict.id">
-                                    {{uiDistrict.name}}
+                                    {{uiDistrict.districtName}}
                                 </option>
                             </select>
                             </div>
