--- a/WinCorePatPranali/src/main.css
+++ b/WinCorePatPranali/src/main.css
@@ -2079,7 +2079,7 @@ pre {
     font-size: 1rem;
     font-weight: 400;
     line-height: 1.5;
-    color: #495057;
+    color: #1b5c9e;
     background-color: #fff;
     background-clip: padding-box;
     border: 1px solid #ced4da;
