--- a/WinCorePatPranali/src/app/common/spinner/spinner.component.html
+++ b/WinCorePatPranali/src/app/common/spinner/spinner.component.html
@@ -1,3 +1,3 @@
 <div *ngIf="(_sharedService.isLoading$ | async)" class="spinner-overlay">
-    <img src="../../../assets/images/Spin-1s-100px.gif">
+    <img height="150px" src="../../../assets/images/loader.gif">
  </div>
