Modified customer screen as per new database

--- a/WinCorePatPranali/src/app/app-router/app-router.component.html
+++ b/WinCorePatPranali/src/app/app-router/app-router.component.html
@@ -567,7 +567,7 @@
 
                         </li>
 
-                        <li class="app-sidebar__heading">
+                        <!-- <li class="app-sidebar__heading">
                             <a href="#">
                                 <i class="metismenu-icon pe-7s-timer icon-gradient bg-malibu-beach"></i>
                                 Daily Work
@@ -617,9 +617,9 @@
                                     </a>
                                 </li>
                             </ul>
-                        </li>
+                        </li> -->
 
-                        <li class="app-sidebar__heading">
+                        <!-- <li class="app-sidebar__heading">
                             <a href="#">
                                 <i class="metismenu-icon pe-7s-date icon-gradient bg-grow-early"></i>
                                 Daily Reports
@@ -671,9 +671,9 @@
 
 
                             </ul>
-                        </li>
+                        </li> -->
 
-                        <li class="app-sidebar__heading">
+                        <!-- <li class="app-sidebar__heading">
                             <a href="#">
                                 <i class="metismenu-icon pe-7s-news-paper icon-gradient bg-plum-plate"></i>
                                 Reports
@@ -725,9 +725,9 @@
                             </ul>
 
 
-                        </li>
+                        </li> -->
                         
-                        <li class="app-sidebar__heading">
+                        <!-- <li class="app-sidebar__heading">
                             <a href="#">
                                 <i class="metismenu-icon pe-7s-notebook icon-gradient bg-love-kiss"></i>
                                 Registers
@@ -779,9 +779,9 @@
                             </ul>
 
 
-                        </li>
+                        </li> -->
                         
-                        <li class="app-sidebar__heading">
+                        <!-- <li class="app-sidebar__heading">
                             <a href="#">
                                 <i class="metismenu-icon pe-7s-wristwatch "></i>
                                 Periodicals
@@ -833,9 +833,9 @@
                             </ul>
 
 
-                        </li>
+                        </li> -->
                         
-                        <li class="app-sidebar__heading">
+                        <!-- <li class="app-sidebar__heading">
                             <a href="#">
                                 <i class="metismenu-icon pe-7s-graph3 icon-gradient bg-mixed-hopes"></i>
                                 Graphical Representation
@@ -887,7 +887,7 @@
                             </ul>
 
 
-                        </li>
+                        </li> -->
                         
                         <li class="app-sidebar__heading">
                             <a href="#">
@@ -923,7 +923,7 @@
                                 <li>
                                     <a [class.mm-active]="isMenuSelected('tahsils')" (click)="configClick('tahsils')">
                                         <i class="metismenu-icon pe-7s-next-2"></i>
-                                        Tahsil Master
+                                        Taluka Master
                                     </a>
                                 </li>
                                 <li>
@@ -966,7 +966,7 @@
                             </ul>
                         </li>
 
-                        <li class="app-sidebar__heading">
+                        <!-- <li class="app-sidebar__heading">
                             <a href="#">
                                 <i class="metismenu-icon pe-7s-tools icon-gradient bg-strong-bliss"></i>
                                 Tools
@@ -1018,9 +1018,9 @@
                             </ul>
 
 
-                        </li>
+                        </li> -->
 
-                        <li class="app-sidebar__heading">
+                        <!-- <li class="app-sidebar__heading">
                             <a href="#">
                                 <i class="metismenu-icon pe-7s-users icon-gradient bg-malibu-beach"></i>
                                 Users
@@ -1046,9 +1046,9 @@
                                     </a>
                                 </li>
                             </ul>
-                        </li>
+                        </li> -->
                         
-                        <li class="app-sidebar__heading">
+                        <!-- <li class="app-sidebar__heading">
                             <a href="#">
                                 <i class="metismenu-icon pe-7s-help1 icon-gradient bg-premium-dark"></i>
                                 Help
@@ -1100,7 +1100,7 @@
                             </ul>
 
 
-                        </li>
+                        </li> -->
                     </ul>
                 </div>
             </div>
