--- a/WinCorePatPranali/src/app/screens/masters/tahshil-master/tahshil-master-form/tahshil-master-form.component.html
+++ b/WinCorePatPranali/src/app/screens/masters/tahshil-master/tahshil-master-form/tahshil-master-form.component.html
@@ -3,7 +3,7 @@
         <div class="main-card mb-3 card">
             <div class="card-body">
                 <form [formGroup]="tahsilForm" #form="ngForm">
-                    <h5 class="card-title">Tahsil</h5>
+                    <h5 class="card-title">Taluka</h5>
                     <div class="row">
                         <div class="col-md-6 position-relative form-group">
                             <label for="txtCode" class="">Code</label>
