--- a/WinCorePatPranali/src/app/screens/masters/tahshil-master/tahshil-master-list/tahshil-master-list.component.html
+++ b/WinCorePatPranali/src/app/screens/masters/tahshil-master/tahshil-master-list/tahshil-master-list.component.html
@@ -5,17 +5,17 @@
             <div class="card-body">
                 <div class="row">
                     <div class="col-md-6 position-relative">
-                        <h5 class="card-title">Tahsils</h5>
+                        <h5 class="card-title">Talukas</h5>
                     </div>
                     <div class="col-md-6 position-relative">
-                        <button class="mt-1 btn btn-primary float-right" (click)="add('district')">Add Tahsil</button>
+                        <button class="mt-1 btn btn-primary float-right" (click)="add('district')">Add Taluka</button>
                     </div>
                 </div>
                 <table class="mb-0 table table-striped">
                     <thead>
                         <tr>
                             <!-- <th width="5%">#</th> -->
-                            <th width="30%">Tahsil</th>
+                            <th width="30%">Taluka</th>
                             <th width="25%">District</th>
                             <th width="25%">State</th>
                             <th width="15%">Actions</th>
